verbatim environment should produce fixed spacing fonts

--- a/public/stylesheets/base.less
+++ b/public/stylesheets/base.less
@@ -6,6 +6,10 @@
     display: none;
 }
 
+.verb {
+    font-family: monospace;
+}
+
 /*****************************************************************/
 /* Use mathjax fonts for body text... or not, since it is so ugly. */
 
